--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-4 sticky-lg-top vh-100">
                     <div class="d-flex flex-column h-100 text-center overflow-auto shadow">
                         <img class="w-100 img-fluid mb-4" src="img/profile.jpg" alt="Image">
-                        <h1 class="text-primary mt-2">John Doe</h1>
+                        <h1 class="text-primary mt-2">Kai Ronfeldt Weiner/h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
                             <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
@@ -65,17 +65,21 @@
                 <div class="col-lg-8">
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                        <h1 class="title pb-3 mb-5">This website is currently under construction</h1>
                         <h1 class="title pb-3 mb-5">About Me</h1>
+                        <div class="container text-center">
+                            <a href="hci_page.html" class="btn btn-info" role="button">HCI Project page</a>
+                         </div>                         
                         <p>Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et accusam ea et dolor sit.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Name:</span> John Doe
+                                <span class="fw-medium text-primary">Name:</span> Kai Ronfeldt Weiner
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Birthday:</span> 1 April 1990
+                                <span class="fw-medium text-primary">Birthday:</span> October 5th, 2002
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Degree:</span> Master
+                                <span class="fw-medium text-primary">Education:</span> B.A. Computer Science major, math minor, Carleton College
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Experience:</span> 10 Years
