--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">This website is currently under construction</h1>
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <div class="container text-center">
+                        <div>
                             <a href="hci_page.html" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button">HCI Project page</a>
                          </div>   
-                         <div class="container text-center">
-                            <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button">Resume</a>
+                         <div>
+                            <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button" alt="Headshot">Resume</a>
                          </div>                    
                         <p>Computer Science gradute from Carleton college. <strong>Seeking software design, data analysis, and other technically intensive jobs in the twin cities area.</strong>
                             Experience interning in computational biology labs applying web application design and data visualization skills.
