--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                          <div>
                             <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button" alt="Headshot">Resume</a>
                          </div>                    
-                        <p>Computer Science gradute from Carleton college. <strong>Seeking software design, data analysis, and other technically intensive jobs in the twin cities area.</strong>
-                            Experience interning in computational biology labs applying web application design and data visualization skills.
-                        </p>
+                         <p>Computer Science gradute from Carleton college. 
+                            <strong>Seeking software design, data analysis, and other technically intensive jobs in the twin cities area.</strong>
+                            Experience interning in computational biology labs applying web application design and data visualization skills.</p>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Kai Ronfeldt Weiner
                             </div>
