fixing scrolling error 2

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             </div>
         </div>
         <!-- Spinner End -->
-
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
@@ -68,10 +67,10 @@
                         <h1 class="title pb-3 mb-5">This website is currently under construction</h1>
                         <h1 class="title pb-3 mb-5">About Me</h1>
                         <div>
-                            <a href="hci_page.html" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button">HCI Project page</a>
+                            <a href="hci_page.html" class="btn btn-primary position middle" role="button">HCI Project page</a>
                          </div>   
                          <div>
-                            <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" role="button" alt="Headshot">Resume</a>
+                            <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary position middle" role="button" alt="Headshot">Resume</a>
                          </div>                    
                          <p>Computer Science gradute from Carleton college. 
                             <strong>Seeking software design, data analysis, and other technically intensive jobs in the twin cities area.</strong>
