Fixed scrolling error- Done

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         <!-- Spinner End -->
+
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 sticky-lg-top vh-100">
@@ -71,10 +72,11 @@
                          </div>   
                          <div>
                             <a href="img/Kai_Resume_01_10_24.pdf" class="btn btn-primary position middle" role="button" alt="Headshot">Resume</a>
-                         </div>                    
-                         <p>Computer Science gradute from Carleton college. 
+                         </div> 
+                        <p>Computer Science gradute from Carleton college. 
                             <strong>Seeking software design, data analysis, and other technically intensive jobs in the twin cities area.</strong>
                             Experience interning in computational biology labs applying web application design and data visualization skills.</p>
+                        <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Kai Ronfeldt Weiner
                             </div>
@@ -82,19 +84,19 @@
                                 <span class="fw-medium text-primary">Birthday:</span> October 5th, 2002
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Education:</span> Bachelor of Arts in Computer Science, math minor at Carleton College
+                                <span class="fw-medium text-primary">Degree:</span> Bachelor of Arts, Carleton College
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 10 Years
+                                <span class="fw-medium text-primary">Field of Study:</span> Computer Science major, Math minor
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Phone:</span> +012 345 6789
+                                <span class="fw-medium text-primary">Phone:</span> +510 990 5120
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Email:</span> info@example.com
+                                <span class="fw-medium text-primary">Email:</span> kai.r.weiner@gmail.com
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Address:</span> 123 Street, New York, USA
+                                <span class="fw-medium text-primary">Address:</span> 527 Evelyn Ave, Albany, CA
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Freelance:</span> Available
