Added figma prototype 2

--- a/hci_page.html
+++ b/hci_page.html
@@ -1,3 +1,32 @@
-<p>
-    This page is currently under construction.
-</p>
+<div>
+    Final Three Requirements:
+
+    <p>1. Events board 
+    Based on our transcriptions, it is clear that students find it difficult to find and keep track of events on campus. Both stakeholders mentioned that the main ways to find events is through word-of-mouth or campus posters. This makes it clear that students would benefit from being able to access a streamlined source of information to stay up to date on what opportunities are taking place and when. 
+    </p>
+
+    <p>2. Musicians board 
+    Similar to the events board, there currently is not a reliable way to find other students to play music with. P1 indicates that finding other musicians is primarily done through pre-existing friendships, and P2 indicates that without musical friends, there is little to no opportunity for student musicians to play with others. There is also a wide variety of musical interests students may have that range on a spectrum of casual to serious, and creating a board of musicians’ profiles would allow students to express this nuanced information. 
+    </p>
+
+    <p>
+    3. Privacy 
+    Since we are designing a social media-esque platform, it is important to note that different users may have different levels of comfort with what information they share online. For this reason, we need to consider how to incorporate privacy in our design and allow users to show/hide as much or as little personal information they would like. This is not only important to users, but also events, as some events are open to the public while others are only open to those affiliated with Carleton.     
+    </p>
+
+    To address each requirement:
+
+    <p>1. I tooled the main media page to specifically center around postings for on campus events and performances.</p>
+
+    <img class="img-fluid w-100" src="img/media.png" alt="">
+
+    <p>2. I created a page for musicians to view the profiles of other people on campus (who chose to make their account public) as a tool for smoother online networking.</p>
+
+    <img class="img-fluid w-100" src="img/people.png" alt="">
+
+    <p>3. I created a settings page where users can manage who can see their posts, which posts they can see, and their profile visibility.</p>
+
+    <img class="img-fluid w-100" src="img/settings.png" alt="">
+
+    You can view the full project <a href="https://www.figma.com/proto/lbx45Mk8mBN09MhZISnjRb/CarlTune-Demo?node-id=4-2&p=f&t=lEUaGcP86Rt4CviR-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A2">right here</a>.
+</div>
