Hopefully final commit

--- a/hci_page.html
+++ b/hci_page.html
@@ -1,5 +1,41 @@
 <div>
-    Final Three Requirements:
+    <h2>HCI Main Project: CarlTune</h2>
+    <h2>Teammates: Vanessa Heynes, Liam Keane, Kai Weiner</h2>
+
+    <p>Our team chose to create a tool to address problems with the Carleton music scene: difficulties for students finding people to play music with, problems finding out about available on campus music performances to view, generally strengthening the music community at Carleton.</p>
+
+    <h3>Final Figma Prototype:</h3>
+
+    <p>My team received the following feedback from our final UX evaluation:</p>
+    <ul>
+        <li>Users found it easy to navigate to some pages like settings (the gear icon was obvious)</li>
+        <li>Users felt layout was intuitive</li>
+        <li>Users wanted it to be more visually obvious what current tab they were on</li>
+        <li>Users wanted a homepage</li>
+        <li>Users wanted to be able to filter through type of musician</li>
+        <li>Users wanted to toggle between condensed and spread out information</li>
+    </ul>
+
+    <p>I improved on the UX evaluation by:</p>
+    <ul>
+        <li>Adding a homepage users can navigate to by clicking the app logo</li>
+        <li>Changing the color of the current tab to blue to display the user’s location in the app</li>
+        <li>Added a type of musician filter on search page</li>
+        <li>Added a visual settings option on settings for users to adjust size of posts</li>
+    </ul>
+
+    <p>Images of my final prototype:</p>
+
+    <img class="img-fluid w-100" src="img/f_home.png" alt="final prototype home page">
+    <img class="img-fluid w-100" src="img/f_media.png" alt="final prototype media page">
+    <img class="img-fluid w-100" src="img/f_people.png" alt="final prototype people page">
+    <img class="img-fluid w-100" src="img/f_upload.png" alt="final prototype upload page">
+    <img class="img-fluid w-100" src="img/f_search.png" alt="final prototype search page">
+    <img class="img-fluid w-100" src="img/f_settings.png" alt="final prototype settings page">
+
+    <p> You can access my final Figma prototype <a href = "https://www.figma.com/design/PJ7wVjpZaDqKcT012MU7GH/CarlTune-Demo-(Copy)?node-id=0-1&t=9DfwhMJlOtSyIngm-1">right here</a>.</p>
+    
+    <h3>Figma Prototype 2:</h3>
 
     <p>1. Events board 
     Based on our transcriptions, it is clear that students find it difficult to find and keep track of events on campus. Both stakeholders mentioned that the main ways to find events is through word-of-mouth or campus posters. This makes it clear that students would benefit from being able to access a streamlined source of information to stay up to date on what opportunities are taking place and when. 
@@ -18,15 +54,19 @@
 
     <p>1. I tooled the main media page to specifically center around postings for on campus events and performances.</p>
 
-    <img class="img-fluid w-100" src="img/media.png" alt="">
+    <img class="img-fluid w-100" src="img/media.png" alt="prototype 2 media page">
 
     <p>2. I created a page for musicians to view the profiles of other people on campus (who chose to make their account public) as a tool for smoother online networking.</p>
 
-    <img class="img-fluid w-100" src="img/people.png" alt="">
+    <img class="img-fluid w-100" src="img/people.png" alt="prototype 2 people page">
 
     <p>3. I created a settings page where users can manage who can see their posts, which posts they can see, and their profile visibility.</p>
 
-    <img class="img-fluid w-100" src="img/settings.png" alt="">
+    <img class="img-fluid w-100" src="img/settings.png" alt="prototype 2 settings page">
 
     You can view the full project <a href="https://www.figma.com/proto/lbx45Mk8mBN09MhZISnjRb/CarlTune-Demo?node-id=4-2&p=f&t=lEUaGcP86Rt4CviR-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A2">right here</a>.
+
+    <h3>Figma Prototype 1:</h3>
+
+    I did not complete the initial Figma prototype.
 </div>
