--- a/hci_page.html
+++ b/hci_page.html
@@ -64,7 +64,7 @@
 
     <img class="img-fluid w-100" src="img/settings.png" alt="prototype 2 settings page">
 
-    You can view the full project <a href="https://www.figma.com/proto/lbx45Mk8mBN09MhZISnjRb/CarlTune-Demo?node-id=4-2&p=f&t=lEUaGcP86Rt4CviR-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A2">right here</a>.
+    <p>You can view the full project <a href="https://www.figma.com/proto/lbx45Mk8mBN09MhZISnjRb/CarlTune-Demo?node-id=4-2&p=f&t=lEUaGcP86Rt4CviR-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A2">right here</a>.</p>
 
     <h3>Figma Prototype 1:</h3>
 
